# flask-getting-started

./: pyproject.toml  run  tailwind.config.js
flaskr/: __init__.py  auth.py  db.py  index.py
flaskr/static/: style.css
flaskr/templates/: base.html
flaskr/templates/auth/: login.html  register.html
